--- a/WebContent/WEB-INF/web.xml
+++ b/WebContent/WEB-INF/web.xml
@@ -10,6 +10,6 @@
     <welcome-file>default.jsp</welcome-file>
   </welcome-file-list>
   <listener>
-      <listener-class>com.weakie.global.Listener</listener-class>
+      <listener-class>com.weakie.global.ServerListener</listener-class>
   </listener>
 </web-app>
