--- a/build.xml
+++ b/build.xml
@@ -40,6 +40,7 @@
 	<!-- Compiles the java code (including the usage of library for JUnit -->
 	<target name="compile" depends="clean, makedir">
 		<javac srcdir="${src.dir}" destdir="${build.dir}" classpathref="build.classpath" includeantruntime="on" />
+		<copy file="${config.dir}/log4j2.xml" todir="${build.dir}"  overwrite="true"  />
 		<copy file="${spring.dir}/applicationContext.xml" todir="${build.dir}"  overwrite="true"  />
 		<copy file="${spring.dir}/spring-bean-threadpool.xml" todir="${build.dir}"  overwrite="true"  />
 	</target>
