--- a/build.xml
+++ b/build.xml
@@ -11,13 +11,14 @@
 	<property name="web-xml-file" value="WebContent/WEB-INF/web.xml" />
 	<property name="war-file-name" value="TDFS.war" />
 
+	<property name="tomcat.dir" value="~/apache-tomcat-6.0.37"/>
 	<!-- other info -->
 	<property name="builder" value="Weakie" />
 	<tstamp prefix="build-info">
 		<format property="current-date" pattern="d-MMMM-yyyy" locale="en" />
 		<format property="current-time" pattern="hh:mm:ss a z" locale="en" />
 	</tstamp>
-	
+
 	<!-- Create a classpath container which can be later used in the ant task -->
 	<path id="build.classpath">
 		<fileset dir="${lib.dir}">
@@ -64,4 +65,13 @@
 		<echo message="完成打包成war可部署文件格式" />
 	</target>
 
+	<target name="dist" depends="build">
+		<echo message="发布项目文件" />
+		<exec dir="${tomcat.dir}/bin" executable="/shutdown.sh" os="Linux" failonerror="true" />
+		<delete dir="${tomcat.dir}/webapps/TDFS" />
+		<copy file="${dist.dir}/${war-file-name}" todir="${tomcat.dir}/webapps" />
+		<exec dir="${tomcat.dir}/bin" executable="/startup.sh" os="Linux" failonerror="true" />
+		<echo message="完成发布文件" />
+	</target>
+	
 </project>
